--- a/quran.css
+++ b/quran.css
@@ -56,6 +56,7 @@ table {
     margin: 0 auto;
     border-radius: 30px;
     color: goldenrod;
+    width: 600px;
 
 
 
@@ -75,23 +76,14 @@ table {
     border-radius: 60px;
     
 }
-.container{
-    display: flex;
-    justify-content: center;
-}
-.container input{
-    border-radius: 50px;
-    border: none;
-    outline: none;
-    height: 30px;
-    padding: 0 10px;
-}
-.container button {
-    background-color: goldenrod;
-    border-radius: 15px;
-    padding: 5px 15px;
-    border: none;
+.fonts{
+     display: flex;
     color: white;
-    position: relative;
-    height: 30px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    font-weight: bold;
+    
+
 }
+
